# efort_retarget

./: .gitignore  CMakeLists.txt  README.md  car.blend
cmake/: FindCDD.cmake  FindDrawStuff.cmake  FindPQP.cmake
humandes/: jointconstraints.txt  jointconstraintsromitomprot.txt  upperLeftLeg.mtl
humandes/fullscenarios/: between.scen  chair.scen  climbing.scen  fullscenario.scen  generate.scen  generate.txt  kitchen.scen  race.scen  race2.scen  race_climb.scen  rocketbox.scen  truck.scen  truck_front.scen  truck_test.scen  tunnel.scen  zoe.scen  zoey.scen  zombi_room.prm
humandes/lowres/: human.urdf  jointconstraints.txt  lowerLeftLeg.mtl  lowerRightArm.mtl  upperRightArm.mtl
include/astar/: AStar.h  Graph.h
include/planner/: Component.h  PRM.h  RRT.h
rami/bvh/: climb.bvh  climb.states  climb.urdf  climbold.states  crawl.bvh  rami.urdf  rideCar.bvh  rideCar.states  stonescrawl.bvh  stonescrawl.states  stonesprm.bvh  t1.bvh  t1.states  t2.bvh  t2.states  tableprm.bvh  tableprm.states  test.states
rami/model/: jointconstraints.txt  jointconstraints.txt~  jointconstraintsclimb.txt  jointconstraintstable.txt  rideCar.urdf  right_armitomprotation.arm  right_hand_cp_2endsite.mtl  table.urdf
rami/model/roms/: cenglobed102.mtl  cenglobed2.mtl  cenglobedcar.mtl  roms10.mtl
rami/model/roms/eroms/: LeftUpLeg_z_joint.erom  RightArm_z_joint.erom  RightUpLeg_z_joint.erom
rami/modelinria/: arm.rom  climb.urdf  jointconstraints.txt  jointconstraintsclimb.txt  right_armitomprotation.rom  stones.urdf  table.urdf
rami/modelinria/roms/: cenglobed.mtl  roms.mtl
rami/modelinria/roms/eroms/: LeftArm_z_joint.erom
rami/scenarios/: carprm.scen  carprm.txt  climb.scen  climb.txt  rami.scen  rami.scen~  rami.txt  stones.scen  stones.txt  stonescrawl.scen  stonescrawl.txt  stonesprm.scen  stonesprm.txt  table.scen  table.txt  tableprm.scen
rami/scenes/: car.mtl  carprm.mtl  chair.mtl  climb.mtl  stonescrawl.mtl  stonesprm.mtl  stonesprmhigh.mtl  tableprm.txt
rocketboxmale/: between.txt  cenglobed.mtl  cenglobedd.mtl  cenglobedt.mtl  cenglobing.mtl  cenglobing2.mtl  cenglobingt.mtl  chair.txt  climbing.txt  head.dae  human.gv  human.urdf  jointconstraints.txt  jointconstraintscl.txt  kitchen.txt  prm.prm  race.txt  race2.txt  race_climb.txt  rocketbox_male.urdf  truck.txt  truck_up.txt  tunnel.txt  wall.mtl  zombi.txt  zombi.txt~
src/bvh_to_urdf/: CMakeLists.txt  create_obj_box.cpp  create_obj_box.h  generate_contacts.cpp  generate_contacts.h  main.cpp
src/collision/: CMakeLists.txt  Collider.cpp  Collider.h  Object.cpp  Object.h  ObjectDictionary.cpp  ObjectDictionary.h  Obstacle.h  ParserObj.cpp  ParserObj.h  Sphere.cpp  Sphere.h
src/drawapp/: CMakeLists.txt  Main.cpp
src/generateEffectorRom/: CMakeLists.txt  main.cpp
src/prm/: CMakeLists.txt  Generator.cpp  Generator.h  LocalPlanner.cpp  LocalPlanner.h  Model.h  Scenario.cpp  Scenario.h  SimplePRM.cpp  SimplePRM.h  SimpleRRT.cpp  SimpleRRT.h
src/prmpath/: CMakeLists.txt  CompleteScenario.cpp  CompleteScenario.h  EffectorROM.h  Jacobian.cpp  Jacobian.h  JointConstraint.cpp  JointConstraint.h  PostureSelection.cpp  PostureSelection.h  ROM.cpp  Robot.cpp  Robot.h
src/prmpath/Export/: BVHExporter.cpp  BVHExporter.h  Exporter.cpp  Exporter.h  FileHandler.cpp  FileHandler.h  ITOMPExporter.cpp  ITOMPExporter.h
src/prmpath/animation/: StateInterpolation.cpp  StateInterpolation.h
src/prmpath/ik/: CMakeLists.txt  ForceManipulabilityConstraint.cpp  ForceManipulabilityConstraint.h  IKSolver.cpp  IKSolver.h  MatchTargetConstraint.cpp  MatchTargetConstraint.h  MatchTargetConstraintPos.cpp  MatchTargetConstraintPos.h  ObstacleAvoidanceConstraint.cpp  ObstacleAvoidanceConstraint.h  PartialDerivativeConstraint.cpp  PartialDerivativeConstraint.h  VectorAlignmentConstraint.cpp  VectorAlignmentConstraint.h
src/prmpath/sampling/: Sample.cpp  Sample.h
src/prmpath/smoothing/: InterpolateRRT.cpp  InterpolateRRT.h  smooth.cpp  smooth.h
src/rejection/: CMakeLists.txt  Main.cpp
src/retarget/: CMakeLists.txt  CMakeLists.txt~  Motion.cpp  Motion.h  MotionInternal.cpp  MotionInternal.h  Parser.h
src/tools/: ExpMap.cpp  ExpMap.h  Timer.cpp  Timer.h  TimerPerf.h
tests/: 1911.states  almoststones.states  baisse.states  baisse2.states  chair.txt  chair_left.txt  climb.bvh  climbing.prm  climbingvisibillity.txt  crawl_1.txt  crawl_ok.txt  crawldanslefond.txt  entrance.path  entrance_path.txt  evac.txt  finalstone1.states  front.prm  front_pas_mal.txt  itomp.path  mer15front.prm  okstones2.states  on_left_wall.txt  piscine.scen  profile.scen  profile.txt  race.bvh  race_2.txt  race_climb.prm  race_ground.prm  race_tight.prm  splineOK.states  stonesbest.states  stonesfinal1.states  stonesok1.states  sunday.prm  table1718mid.states  test.bvh  test.bvh~  test.path  test.prm  (+15 more)
tests/collision/: across.mtl  appartzombi.mtl  appartzombiroof.mtl  between.mtl  camion.mtl  cenglobed001.mtl  cenglobing001.mtl  chair.blend  crouch.mtl  crouch_between.mtl  cube07.mtl  cubeenglob.mtl  cubeenglob07.mtl  demo.blend  demo.blend1  dodge_reverse.mtl  entrance.dae  entrance.mtl  entrance001.mtl  piscine.mtl  race.mtl  race_1.mtl  race_1obj.mtl  race_2.blend  race_2.mtl  race_climb.blend  race_climb.blend1  race_climb.mtl  race_tight.mtl  rom.blend  rom.blend1  rom.blend2  rom_simple.blend  sofa90.dae  sofa90scale.dae  truck.blend  truck.blend1  truck.mtl  truck_09.mtl  truck_obj_up.blend  (+19 more)
tests/kinematics/io/: Robot0.txt  RobotLoad.txt  RobotTag.txt
textures/: checkered.ppm  checkered1.ppm  grounddesertmoi.ppm  groundjap.ppm  groundsand.ppm  skyCartoon.ppm  woodGren.ppm  woodbrique.ppm
textures/wall/: checkered.ppm  ground.ppm  wood.ppm
